added styles to question single page

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -20,7 +20,7 @@ body
        a(href=`/`)
           button(class='btn question') Questions
      div(class='search-container')
-      input(type='search' class='search-box')
+      input(type='search' class='search-box' placeholder='Search.........')
       i(class="fas fa-search" id='search-icon')
      div(class='right-corner-buttons')
         div(class='user-homepage-link-container')
@@ -43,7 +43,7 @@ body
       a(href='/users/guest')
           button(class='btn guest') Demo Login
     div(class='search-container' )
-      input(type='search' class='search-box')
+      input(type='search' class='search-box' placeholder='Search.........')
       i(class="fas fa-search" id='search-icon')
     div(class='entry-container')
       a(href='/users/login')
