--- a/views/single-question-page.pug
+++ b/views/single-question-page.pug
@@ -4,7 +4,9 @@ block content
   div(class='question-container-page')
     div(class='side-bar')
       div(class='user-message')
-      a(href='/' class='side-bar btn') Home
+          a(href='/' class='side-bar btn') Home
+          p PUBLIC
+          a(href='') Questions
     div(class='question-container')
         div(class='question-box')
           div(class="question-header")
