--- a/views/user-homepage.pug
+++ b/views/user-homepage.pug
@@ -3,10 +3,11 @@ extends index.pug
 block content
       body
         div(class='user-homepage-page')
-          div(class='user-homepage-sidebar')
-            div(class='user-homepage-home-button')
-              a(href='/' )
-                button Home
+          div(class='side-bar')
+            div(class='user-message')
+              a(href='/' class='side-bar btn') Home
+              p PUBLIC
+              a(href='') Questions
           div(class='user-homepage-right-container')
               div(class='profile-container')
                 div(class='profile-image-container')
