--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -14,6 +14,10 @@ html {
 .favicon{
     width: 140px;
     height: 50px;
+    margin-right: 5px;
+}
+.favicon:hover {
+    box-shadow: 0px 0px 10px 3px #b1b1b1;
 }
 @media screen and (max-width: 800px){
     .btn.home {display: none; }
@@ -71,7 +75,7 @@ body{
     /* border-color: #bbc0c4; */
     background-color: white;
     color: #3c4146;
-    padding-left: 32px;
+    padding-left: 45px;
     width: 100%;
     /* margin: 0; */
     /* padding-top: 0.6em; */
@@ -99,7 +103,7 @@ body{
     /* vertical-align: center; */
     margin-top: -12px;
 
-    font-size: 25px;
+    font-size: 20px;
 }
 button {
     display: flexbox;
@@ -121,13 +125,13 @@ button.homepage {
     margin-top: 12px;
     border: 1px solid transparent;
     /* border-color: rgb(255, 255, 255); */
-    border-radius: 3px;
+    border-radius: 20px;
 
 }
 button:hover{
     /* background-color:  #2c2c2c; */
     /* background-color: white; */
-    background-color:rgb(255, 255, 255);
+    background-color:rgb(236, 235, 235);
     color: black;
 
 }
@@ -150,8 +154,8 @@ button.home:hover{
 }
 
 .btn.entry:hover{
-    background-color:  rgb(255, 255, 255);
-    color:black
+    background-color:  rgb(74, 110, 110);
+    /* color:black */
 }
 
 .entry-container{
@@ -202,8 +206,8 @@ button.home:hover{
 
 
 .btn.ask-question:hover{
-    background-color:  rgb(255, 255, 255);
-    color:black;
+    background-color:   rgb(74, 110, 110);
+    /* color:black; */
     border: 1px solid rgb(212, 212, 212)
 }
 
@@ -218,7 +222,7 @@ button.home:hover{
 
 .side-bar p{
     margin: 10px 0px 0px 20px;
-    color: gray;
+    color: rgb(175, 174, 174);
     font-size: small
 }
 
@@ -388,7 +392,7 @@ button.home:hover{
     display:flex
 }
 .nav-user-greeting{
-    color: white;
+    color:rgb(114, 113, 113);
     padding: 10px;
     font-size: small;
     height:50px;
@@ -535,11 +539,11 @@ button.home:hover{
     box-shadow: 0px 0px 5px 2px #e4e4e4;
 }
 .user-homepage-page{
-    padding-top: 50px;
+    /* padding-top: 50px; */
     background-color: white;
     display: grid;
     min-height: 800px;
-    grid-template-columns: 1fr 10fr;
+    grid-template-columns: 1fr 6fr;
 }
 .user-homepage-sidebar{
     border-right: 1px solid rgb(196, 194, 194);
@@ -561,9 +565,9 @@ button.home:hover{
     border-bottom: 1px solid rgb(212, 211, 211);
     width: 400px
 }
-.profile-container{
+.profile-container {
     display: flex;
-    padding: 30px;
+    padding: 60px 30px 30px 30px;
 }
 
 .user-homepage-right-container{
@@ -616,7 +620,7 @@ button.home:hover{
 
 .question-container-page{
     display:grid;
-    grid-template-columns: 1fr 10fr;
+    grid-template-columns: 1fr 6fr;
 
 }
 
