--- a/views/questions-list.pug
+++ b/views/questions-list.pug
@@ -23,15 +23,15 @@ div(class='question-page')
                                     div(class='vote-box')
                                        if locals.authenticated
                                           form(action='/votes/upvote/question' method='PATCH')
-                                             button(class="question-upvote-button" id=`question-upvote-${question.id}`)
-                                                i(class="fas fa-chevron-up")
+                                             button(class="fas fa-chevron-up" id=`question-upvote-${question.id}`)
+                                                //- i(class="fas fa-chevron-up")
                                              //- i(class='fas fa-chevron-up'  id=`question-upvote-${question.id}` type="button" class="question-upvote-button")
                                        div(class='span')
                                           span(class='number' id=`question-counter-${question.id}`) #{question.voteCount}
                                        if locals.authenticated
                                           form(action='/votes/downvote/question' method='PATCH')
-                                             button(class="question-downvote-button" id=`question-downvote-${question.id}`)
-                                                i(class="fas fa-chevron-down")
+                                             button(class="fas fa-chevron-down" id=`question-downvote-${question.id}`)
+                                                //- i(class="fas fa-chevron-down")
                                              //- i(class='fas fa-chevron-down'  id=`question-downvote-${question.id}` type="button" class="question-downvote-button")
                                        div(class='span')
                                           span votes
