--- a/views/single-question-page.pug
+++ b/views/single-question-page.pug
@@ -19,6 +19,30 @@ block content
               div(class='question-upvote')
                 if locals.authenticated
                   form(action='/votes/upvote/question' method='PATCH')
+                    button(class="fas fa-chevron-up" id=`question-upvote-${question.id}`)
+                      //- i(class="fas fa-chevron-up")
+                //- i(class='fas fa-chevron-up'  id=`question-upvote-${question.id}` type="button" class="question-upvote-button")
+              div(class='question-span')
+                span(class='number' id=`question-counter-${question.id}`) #{question.voteCount}
+              if locals.authenticated
+                form(action='/votes/downvote/question' method='PATCH')
+                  button(class='fas fa-chevron-down' id=`question-downvote-${question.id}`)
+                    //- i(class="fas fa-chevron-down")
+                  //- i(class='fas fa-chevron-down'  id=`question-downvote-${question.id}` type="button" class="question-downvote-button")
+              div(class='span')
+                span votes
+            div(class='question-description-content')
+              div(class='description')
+                p #{question.question}
+              div(class='user-info-container')
+                div(class='user-info')
+                  p Asked by: #{userQ.userName} User info
+                  //- this is wehre i copied
+          div(class='question-description')
+            div(class="votes-container")
+              div(class='question-upvote')
+                if locals.authenticated
+                  form(action='/votes/upvote/question' method='PATCH')
                     button(class="question-upvote-button" id=`question-upvote-${question.id}`)
                       i(class="fas fa-chevron-up")
                 //- i(class='fas fa-chevron-up'  id=`question-upvote-${question.id}` type="button" class="question-upvote-button")
