--- a/views/footer.pug
+++ b/views/footer.pug
@@ -1,3 +1,11 @@
 footer
      div(class='footer-container')
-            p I will be at the footer
+          div(class='footer-logo')
+               a(href='/')
+                    img(class='footer-logo-img' src="/images/pet-flow-logo.png")
+          div(class='footer-logo-name')
+               h5(class='name') PET CLINIC
+               ul(class='name-li')
+                    li: a(href='/') Questions
+                    li: a(href='/users/login') Log In
+                    li: a(href='/users/register') Create an Account
