--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -17,7 +17,7 @@ html {
     margin-right: 5px;
 }
 .favicon:hover {
-    box-shadow: 0px 0px 10px 3px #b1b1b1;
+    box-shadow: 0px 0px 3px 1px #b1b1b1;
 }
 @media screen and (max-width: 800px){
     .btn.home {display: none; }
@@ -340,7 +340,8 @@ button.home:hover{
 .answer-box span {
     display:flex;
     justify-content: center;
-    font-size: 12px
+    font-size: 12px;
+    margin-top: 7px;
 }
 
 .answer-box {
@@ -733,10 +734,14 @@ a {
 }
 
 .answer-box{
-    border-top: 1px solid rgb(177, 174, 174)
+    border-top: 1px solid rgb(177, 174, 174);
+
 }
 
-
+.answer-header h2{
+    margin: 15px 0px 0px 0px;
+    font-size: larger
+}
 
 /* QUESTION_FORM(AKA ASK QUESTION) */
 .question-form-page{
