--- a/views/footer.pug
+++ b/views/footer.pug
@@ -9,3 +9,20 @@ footer
                     li: a(href='/') Questions
                     li: a(href='/users/login') Log In
                     li: a(href='/users/register') Create an Account
+          div(class='footer-info')
+               text Icons made by
+               a(href='http://www.fontawesome.com' target="_blank") Font Awesome
+          div(class='developed-by')
+               h5(class='name') DEVELOPED BY:
+               div(class='names-box')
+                    ul(class='names-list')
+                         li
+                              text Hiep Khuu
+                              div
+                                   a(class="fab fa-github" href='https://github.com/hiepkhuu')
+                                   a(class="fab fa-linkedin" href='https://www.linkedin.com/in/hiep-khuu-380111201/')
+                         li
+                              text Vivian Ngoc Che
+                              div
+                                   a(class="fab fa-github" href='https://github.com/itsvivrant')
+                                   a(class="fab fa-linkedin" href='https://www.linkedin.com/in/vivian-ngoc-che-6085a6b5/')
