--- a/views/questions-list.pug
+++ b/views/questions-list.pug
@@ -4,7 +4,9 @@ div(class='question-page')
                div(class='user-message')
                a(href='/' class='side-bar btn') Home
                p PUBLIC
-               a(href='') Questions
+               div(class='q-link')
+                 image(class='earth' src='/images/earth.png')
+                  a(href='/') Questions
           div(class='questions-list-container')
              div(class='questions-box')
                  div(class='questions-header')
