--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -417,7 +417,6 @@ button.home:hover{
 }
 
 /* FOOTER */
-
 .footer-container{
     display: grid;
     grid-template-columns: 1fr 1fr 10fr 10fr;
@@ -427,16 +426,13 @@ button.home:hover{
     height: 200px;
     border-top: 5px solid rgb(187, 123, 123);
 }
-
 .footer-logo-img {
     width: 50px;
     height: 50px;
 }
-
 .footer-logo-name {
     margin-left: 30px;
 }
-
 .name {
     text-transform: uppercase;
     font-weight: bold;
@@ -445,7 +441,6 @@ button.home:hover{
     color: #bbc0c4;
     margin-top: 0px;
 }
-
 .name-li li {
     list-style: none;
     font-size: 1rem;
@@ -456,35 +451,31 @@ button.home:hover{
     outline: 0;
     font-weight: normal
 }
-
 a {
     text-decoration: none;
 }
-
 .footer-info {
     margin-left: 30px;
 }
-
 .footer-info text {
     margin-right: 3px
 }
-
 .footer-info a {
     color: #0077cc;
 }
-
 .names-list {
     list-style: none;
 }
-
 text {
    color: #bbc0c4
 }
-
-.fab.fa-github {
-    size: 7x
+.fab.fa-github,
+.fab.fa-linkedin{
+    font-size: 24px;
+    padding: 5px;
+    color: white;
+    background-color: #1d1f1f;
 }
-
 /* LOGIN PAGE */
 .log-in-page{
     display: flex;
