--- a/views/single-question-page.pug
+++ b/views/single-question-page.pug
@@ -42,9 +42,10 @@ block content
                   //- this is wehre i copied
           div
             div(class='answer-header')
-               if locals.authenticated
-                   h2 Answers
-               each answer in answers
+              h2 Answers
+              if (answers.length <0)
+                h2 This Question has no answers
+              each answer in answers
                   div(class='question-description')
                     div(class="votes-container")
                       div(class='question-upvote')
