--- a/views/answers.pug
+++ b/views/answers.pug
@@ -11,7 +11,7 @@ block content
               div
                   input(type='hidden', name='_csrf' value=csrfToken)
               div(class='answer-label')
-                  label(for='answer') Answer
+                  label(for='answer') Post your answer
               div(class='answer-form-textarea')
                   textarea(name='answer', rows=10)
               div
