--- a/views/questions-list.pug
+++ b/views/questions-list.pug
@@ -25,14 +25,12 @@ div(class='question-page')
                                     div(class='vote-box')
                                        if locals.authenticated
                                           form(action='/votes/upvote/question' method='PATCH')
-                                             button(class="question-upvote-button" id=`question-upvote-${question.id}`)
-                                                i(class="fas fa-chevron-up")
+                                             button(class="fas fa-chevron-up question-upvote-button" id=`question-upvote-${question.id}`)
                                        div(class='span')
                                           span(class='number' id=`question-counter-${question.id}`) #{question.voteCount}
                                        if locals.authenticated
                                           form(action='/votes/downvote/question' method='PATCH')
-                                             button(class="question-downvote-button" id=`question-downvote-${question.id}`)
-                                                i(class="fas fa-chevron-down")
+                                             button(class="fas fa-chevron-down question-downvote-button" id=`question-downvote-${question.id}`)
                                        div(class='span')
                                           span votes
                                     div(class='answer-box')
