--- a/views/single-question-page.pug
+++ b/views/single-question-page.pug
@@ -21,14 +21,14 @@ block content
               div(class='question-upvote')
                 if locals.authenticated
                   form(action='/votes/upvote/question' method='PATCH')
-                    button(class="fas fa-chevron-up" id=`question-upvote-${question.id}`)
+                    button(class="fas fa-chevron-up question-upvote-button" id=`question-upvote-${question.id}`)
                       //- i(class="fas fa-chevron-up")
                 //- i(class='fas fa-chevron-up'  id=`question-upvote-${question.id}` type="button" class="question-upvote-button")
               div(class='question-span')
                 span(class='number' id=`question-counter-${question.id}`) #{question.voteCount}
               if locals.authenticated
                 form(action='/votes/downvote/question' method='PATCH')
-                  button(class='fas fa-chevron-down' id=`question-downvote-${question.id}`)
+                  button(class="fas fa-chevron-down question-downvote-button" id=`question-downvote-${question.id}`)
                     //- i(class="fas fa-chevron-down")
                   //- i(class='fas fa-chevron-down'  id=`question-downvote-${question.id}` type="button" class="question-downvote-button")
               div(class='span')
@@ -52,13 +52,13 @@ block content
                       div(class='question-upvote')
                         if locals.authenticated
                           form(action=`/votes/upvote/answer/` method='PATCH')
-                            button(class="fas fa-chevron-up" id=`answer-upvote-${answerVote.dataValues.id}`)
+                            button(class="fas fa-chevron-up answer-upvote-button" id=`answer-upvote-${answer.id}`)
                         //- i(class='fas fa-chevron-up'  id=`question-upvote-${question.id}` type="button" class="question-upvote-button")
                       div(class='question-span')
-                        span(class='number' id=`answer-counter-${answerVote.dataValues.id}`) #{answerVote.dataValues.voteCount}
+                        span(class='number' id=`answer-counter-${answer.id}`) #{answer.voteCount}
                       if locals.authenticated
                         form(action=`/votes/downvote/answer/` method='PATCH')
-                          button(class="fas fa-chevron-down" id=`answer-downvote-${answerVote.dataValues.id}`)
+                          button(class="fas fa-chevron-down answer-downvote-button" id=`answer-downvote-${answer.id}`)
                           //- i(class='fas fa-chevron-down'  id=`question-downvote-${question.id}` type="button" class="question-downvote-button")
                       div(class='span')
                         span votes
