--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,7 +2,7 @@ doctype html
 html
   head
       block head
-        title="PetFlow"
+        title="PetClinic"
         link(rel='stylesheet' href='/stylesheets/reset.css')
           //- add page specific styles by appending to the head
         link(rel="stylesheet" href="/stylesheets/index.css")
