--- a/views/questions-list.pug
+++ b/views/questions-list.pug
@@ -35,7 +35,7 @@ div(class='question-page')
                                           span votes
                                     div(class='answer-box')
                                        div(class='span')
-                                          span(id='number') 0
+                                          span(id='number') #{question.dataValues.Answers.length}
                                        div(class='span')
                                           span answers
                                   div(class='question-display-box')
