--- a/views/single-question-page.pug
+++ b/views/single-question-page.pug
@@ -63,12 +63,12 @@ block content
                     div(class='question-description-content')
                       div(class='description')
                         p #{answer.answer}
-                      div(class='user-info-container')
+                      div(class='answer-info-container')
                         div(class='answer-delete-edit-container')
                           if locals.user
                             if locals.user.id === answer.userId
-                              button(class='delete-answer' id=`${answer.id}`) Delete
-                              button(class='edit-answer' id=`${answer.id}`) Edit
+                              a(class='edit-answer' id=`${answer.id}`) Edit
+                              a(class='delete-answer' id=`${answer.id}`) Delete
                         div(class='user-info')
                           p Answered By: #{userA.dataValues.username}
 
