--- a/views/layout.pug
+++ b/views/layout.pug
@@ -17,7 +17,7 @@ body
         a(href='/')
           image(class='favicon' src='/images/pet-flow-logo-with-name.png')
      div
-       a(href=`/`)
+       a(href=`/questions`)
           button(class='btn question') Questions
      div(class='search-container')
       input(type='search' class='search-box' placeholder='Search.........')
@@ -38,7 +38,7 @@ body
       a(href='/')
           image(class='favicon' src='/images/pet-flow-logo-with-name.png')
     div
-      a(href=`/`)
+      a(href=`/questions`)
           button(class='btn question') Questions
       a(href='/users/guest')
           button(class='btn guest') Demo Login
@@ -50,5 +50,8 @@ body
           button(class='btn entry') Log in
       a(href='/users/register')
           button(class='btn entry') Sign up
+    div
+      images(src="./public/images/petclinic-splashpage.png", alt="")
+
 
   block content
