--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -608,6 +608,7 @@ text {
    width: 20em;
    height: 25em;
    display: flex;
+   flex-direction: column;
    justify-content: center;
 
 
@@ -615,7 +616,7 @@ text {
 
 .signup-form{
     width: 100%;
-    height: 100%;
+    height: auto;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0px 0px 10px 3px #b1b1b1;
@@ -1020,4 +1021,18 @@ text {
 .submit-answer-button:hover{
     background-color: rgb(74, 110, 110);
     color:white
+}
+
+/********** ERRORS ***************/
+.alert.alert-danger {
+    font-size: 10px;
+    color: red;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.alert.alert-danger p{
+    margin-bottom: 1px;
+    padding: 0
 }
