--- a/views/utils.pug
+++ b/views/utils.pug
@@ -2,6 +2,5 @@ mixin validationErrorSummary(errors)
   if errors
     div(class='alert alert-danger' role='alert')
       p The following error(s) occured:
-        ul
           each error in errors
-            li= error
+            p #{error}
