home button style

--- a/views/splashpage.pug
+++ b/views/splashpage.pug
@@ -1,2 +1,6 @@
+extends index.pug
 
-
+block content
+    body
+      div
+        image(class="splash-photo" src="/images/petclinic-splashpage.png", alt="")
