--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -65,11 +65,15 @@ body{
 
 }
 
-/* SPLASHPAGE */
+/*****************SPLASHPAGE *****************************/
 .splash-photo{
-    height: 80vh;
+    /* height: 80vh;
     width: 80vw;
-    margin-top: 100px;
+    margin-top: 100px; */
+    background-image: url(/images/petclinic-splashpage.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 80vh;
 }
 
 
