--- a/views/splashpage.pug
+++ b/views/splashpage.pug
@@ -2,5 +2,5 @@ extends index.pug
 
 block content
     body
-      div
+      div(class='splash-photo-page')
         image(class="splash-photo" src="/images/petclinic-splashpage.png", alt="")
