--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -16,7 +16,7 @@ html {
     height: 45px;
     margin-right: 5px;
     border-radius: 20px;
-    padding: 5px 10px;
+    padding: 3px 13px;
 
 }
 .favicon:hover {
@@ -66,10 +66,13 @@ body{
 }
 
 /* SPLASHPAGE */
+.splash-photo-page{
+    padding-top: 100px;
+}
 .splash-photo{
     height: 80vh;
     width: 80vw;
-    margin-top: 100px;
+
 }
 
 
